=========
Changelog
=========

1.3b4 (unreleased)
==================

- Remove support for virtualenv with Python 2.4, 2.5 and 3.2.

- Add way to set arbitrary environment variables in crontab.

- Fix performance issue with git and mercurial Clone components.


1.3b3 (2016-05-30)
==================

- Fix a crash in case of GnuPG2 is not installed at all.


1.3b2 (2016-05-27)
==================

- Parallelize connect to remote hosts and bootstrapping of remote batou via
  `./batou deploy`.

- Support remote host/port for MySQL commands.

- Copy virtualenv files instead of symlinking (for Python 2.7 and up).
  Symlinking breaks especially on NixOS since the symlinks point directly to
  the store.

- Hide passwords from output of the `Download` component.

- Add `dependencies` to `supervisor.Program`.

- Fix disconnect error in consistency check.

- Support gpg2.

- Download virtualenv via PIP. This fixes an error caused by the PyPI
  restructuring

1.3b1 (2016-03-09)
==================

- Provided extended prediction support for deployments. In addition to ``-c``
  which checks internal consistency of the configuration model you can pass
  ``-P`` which causes verification to be run and predict which changes
  will be applied when deploying.

- Enhance support for multi-line members in secret files: order them and
  indent them automatically. (#13040)

1.2 (2016-01-29)
================

- Change default of supervisor PID file path to ensure it does something
  useful out of the box.

  It's still a good idea to place it on a temporary filesystem that is wiped
  after a reboot to ensure the PID is from a current system environment.


1.2b2 (2016-01-29)
==================

- Remove the deprecated 'remote' command alias.

- Remove implicit dependency of Supervisor to Logrotation and Nagios.

  Supervisor now has the options ``logrotate`` and ``nagios`` that can
  be enabled per environment.

  **Compatibility note:** if you update from an existing setup with supervisor